--- a/android-app/app/src/main/res/layout/fragment_suggestions.xml
+++ b/android-app/app/src/main/res/layout/fragment_suggestions.xml
@@ -1,27 +1,32 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:padding="20dp">
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <TextView
+        android:id="@+id/text_suggestion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Outfit Suggestion"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/text_suggestion"
-            android:text="Your outfit suggestions will appear here."
-            android:textSize="18sp"
-            android:padding="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+    <ImageView
+        android:id="@+id/image_top"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="20dp"
+        android:background="#DDDDDD"
+        android:scaleType="centerCrop" />
 
-        <ImageView
-            android:id="@+id/image_suggestion"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:scaleType="centerCrop"
-            android:layout_marginTop="20dp"
-            android:background="#dddddd" />
-    </LinearLayout>
-</ScrollView>
+    <ImageView
+        android:id="@+id/image_bottom"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="20dp"
+        android:background="#DDDDDD"
+        android:scaleType="centerCrop" />
+
+</LinearLayout>
