--- a/android-app/app/src/main/res/menu/bottom_menu.xml
+++ b/android-app/app/src/main/res/menu/bottom_menu.xml
@@ -16,4 +16,10 @@
         android:icon="@android:drawable/ic_menu_info_details"
         android:title="Suggestions" />
 
+    <item
+        android:id="@+id/nav_chat"
+        android:title="Chat"
+        android:icon="@drawable/ic_chat"/>
+
+
 </menu>
